syntax = "proto3";

package raft;

// Service for Raft internal operations
service RaftService {
  rpc AppendEntry(EntryRequest) returns (EntryResponse);
  rpc RequestVote(VoteRequest) returns (VoteResponse);
  rpc SendHeartbeat(Heartbeat) returns (HeartbeatResponse);
  rpc AddTransaction(Transaction) returns (TransactionResponse);
}

// The request message for log entries to replicate
message EntryRequest {
  int32 leaderId = 1;           // Leader ID
  int32 logTerm = 2;            // Leader’s term
  int32 logIndex = 3;           // Index of the log entry
  Transaction transaction = 4;  // Transaction to be replicated
  int32 prevLogTerm = 5;        // Term of prevLogIndex entry
  int32 prevLogIndex = 6;       // Index of log entry immediately preceding new ones
}

// A log entry consists of a command for the state machine, and the term when the entry was received by the leader
message Transaction {
  string userId = 1;            // User ID of the person who initiated the transaction
  string stockId = 2;           // Stock symbol or identifier
  int32 quantity = 3;           // Quantity of stocks to buy/sell
  double price = 4;             // Price of the stock
  int64 timestamp = 5;          // Unix timestamp of the transaction
  enum TransactionType {
    BUY = 0;
    SELL = 1;
  }
  TransactionType transactionType = 6;  // Transaction type
}

// The response to AppendEntries RPC
message EntryResponse {
  bool success = 1;              // True if EntryRequest was successful
  int32 missingLogTerm = 2;         // Term of the missing log entry
  int32 missingLogIndex = 3;        // Index of the missing log entry
}

// The request message containing information about the node sending the request.
message VoteRequest {
  int32 term = 1;            // Current term, to detect stale requests
  int32 candidateId = 2;        // Candidate requesting vote
  int32 lastLogIndex = 3;       // Index of candidate's last log entry
  int32 lastLogTerm = 4;        // Term of candidate's last log entry
}

// The response message containing the vote result.
message VoteResponse {
  bool voteGranted = 1;         // True means candidate received vote
}

// The heartbeat message sent by the leader to the followers
message Heartbeat {
  int32 leaderId = 1;           // Leader ID
  int32 term = 2;               // Leader’s term
}

// The response to the heartbeat message
message HeartbeatResponse {
  bool success = 1;             // True if the heartbeat was successful
}

message TransactionResponse {
  bool success = 1;             // True if the transaction was successful
}
